Upgrade to JavaFX 18, add stuff from sample-ratpack